[tool.poetry]
name = "mreaiogram3"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.0.0b7"
aiogram-dialog = "^2.0.0b3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

